--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 
 <body>
     <h1> Welcome to Zuha's Ultimate Timetable Scheduler! </h1>
-    <h3>
-        This program makes multiple schedules of your IBA enrollment timetable using just an upload of the Excel Sheet!
+    <h3> This program makes multiple schedules of your IBA enrollment timetable using just an upload of the Excel Sheet!
     </h3>
 
-    <form onsubmit="displayTimeTable(event)">
+    <form>
+        <!-- file input -->
+        <label for="fileInput"> Enter your IBA schedule file (excel file only) </label>
+        <input type="file" id="fileInput" accept=".xlsx, .xls, .csv"> </input>
+        <br>
+
+        <!-- program input -->
         <label for="Program"> Enter your program: </label>
         <select id="Program" name="Program">
             <option value="BBA"> BBA </option>
@@ -25,9 +30,9 @@
             <option value="BSEM"> BSEM </option>
             <option value="BSMT"> BSMT </option>
         </select>
-
         <br>
 
+        <!-- semester input -->
         <label for="Semester"> Enter your semester: </label>
         <select id="Semester" name="Semester">
             <option value="1"> 1 </option>
@@ -40,9 +45,16 @@
             <option value="8"> 8 </option>
         </select>
         <br>
-        <button type="submit"> Create Timetable </button>
+
+        <!-- displaying timetables and moving forward/backward -->
+        <button type="button" onClick="displayTimeTable()"> Create Timetable </button>
+        <br>
+        <button type="button" onClick="displayNext(1)"> Next timetable </button>
+        <button type="button" onClick="displayNext(-1)"> Previous timetable </button>
     </form>
     <br>
+
+    <!-- table for timetable -->
     <table id="timetable" border="1">
         <thead>
             <tr>
@@ -128,9 +140,9 @@
             </tr>
         </tbody>
     </table>
-
     <br>
 
+    <!-- table for courses -->
     <table id="courses" border="1">
         <thead>
             <tr>
@@ -145,6 +157,8 @@
     </table>
 
     <script type="module" src="./script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+
 </body>
 
 </html>
