adding file reading option

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <br>
 
         <!-- displaying timetables and moving forward/backward -->
-        <button type="button" onClick="displayTimeTable()"> Create Timetable </button>
+        <button id="display" type="button" onClick="displayTimeTable()"> Create Timetable </button>
         <br>
-        <button type="button" onClick="displayNext(1)"> Next timetable </button>
-        <button type="button" onClick="displayNext(-1)"> Previous timetable </button>
+        <button id="forward" type="button" onClick="displayNext(1)"> Next timetable </button>
+        <button id="backward" type="button" onClick="displayNext(-1)"> Previous timetable </button>
     </form>
     <br>
 
