--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <label for="Program"> Enter your program: </label>
         <select id="Program" name="Program">
             <option value="BBA"> BBA </option>
-            <option value="BSACF"> BSACF </option>
+            <option value="BSACF"> BSAF </option>
             <option value="BSECO"> BSECO </option>
             <option value="BSSS"> BSSS </option>
             <option value="BSCS"> BSCS </option>
@@ -53,6 +53,8 @@
         <button id="backward" type="button" onClick="displayNext(-1)"> Previous timetable </button>
     </form>
     <br>
+
+    <span id="timetableCount"></span>
 
     <!-- table for timetable -->
     <table id="timetable" border="1">
