bug fixes & code improvements: 8-Jul-24 12:24 AM

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <label for="Program"> Enter your program: </label>
         <select id="Program" name="Program">
             <option value="BBA"> BBA </option>
-            <option value="BSACF"> BSAF </option>
+            <option value="BSAF"> BSAF </option>
             <option value="BSECO"> BSECO </option>
             <option value="BSSS"> BSSS </option>
             <option value="BSCS"> BSCS </option>
@@ -82,7 +82,7 @@
             </tr>
             <!-- 10:00-11:15 -->
             <tr>
-                <th> 10:00 - 11:30 </th>
+                <th> 10:00 - 11:15 </th>
                 <td></td>
                 <td></td>
                 <td></td>
