fixed timetable making issue by checking course assigned numbers instead of class numbers (not given in sheet)

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <br>
 
     <span id="timetableCount"></span>
+    <span id="timetableDisplaying"></span>
 
     <!-- table for timetable -->
     <table id="timetable" border="1">
