many updates. fixed the lab issue of double slot, but still it is displaying lab on tues when needed on thurs so need to implement an "additional comments" section. improved code readability by making more JS files. need to add filters for electives and teachers, and make lab, lectures move together.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <option value="BSAF"> BSAF </option>
             <option value="BSECO"> BSECO </option>
             <option value="BSSS"> BSSS </option>
-            <option value="BSCS"> BSCS </option>
+            <option value="BSCS" selected> BSCS </option>
             <option value="BSEM"> BSEM </option>
             <option value="BSMT"> BSMT </option>
         </select>
@@ -39,7 +39,7 @@
             <option value="2"> 2 </option>
             <option value="3"> 3 </option>
             <option value="4"> 4 </option>
-            <option value="5"> 5 </option>
+            <option value="5" selected> 5 </option>
             <option value="6"> 6 </option>
             <option value="7"> 7 </option>
             <option value="8"> 8 </option>
