updated file directories and folder format. then researched about filters (dropdown checkboxes) for teacher filters. not implemented yet.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -159,7 +159,7 @@
         <tbody></tbody>
     </table>
 
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="../backend/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
 
 </body>
