--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> Zuha's Ultimate TimeTabler </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./frontend/style.css">
 </head>
 
 <body>
