updated UI using CSS

--- a/index.html
+++ b/index.html
@@ -9,155 +9,170 @@
 </head>
 
 <body>
-    <h1> Welcome to Zuha's Ultimate Timetable Scheduler! </h1>
-    <h3> This program makes multiple schedules of your IBA enrollment timetable using just an upload of the Excel Sheet!
-    </h3>
+    <div id="header">
+        <div id="container">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Timetabler</a></li>
+                    <li class="login"><a href="#">Login</a></li>
+                    <li><a href="#">Register</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div id="all">
+        <h1> Welcome to Zuha's Ultimate Timetable Scheduler! </h1>
+        <h3> This program makes multiple schedules of your IBA enrollment timetable using just an upload of the Excel
+            Sheet!
+        </h3>
 
-    <form>
-        <!-- file input -->
-        <label for="fileInput"> Enter your IBA schedule file (excel file only) </label>
-        <input type="file" id="fileInput" accept=".xlsx, .xls, .csv"> </input>
+        <form>
+            <!-- file input -->
+            <label for="fileInput"> Enter your IBA schedule file (excel file only) </label>
+            <input type="file" id="fileInput" accept=".xlsx, .xls, .csv"> </input>
+            <br>
+
+            <!-- program input -->
+            <label for="Program"> Enter your program: </label>
+            <select id="Program" name="Program">
+                <option value="BBA"> BBA </option>
+                <option value="BSAF"> BSAF </option>
+                <option value="BSECO"> BSECO </option>
+                <option value="BSSS"> BSSS </option>
+                <option value="BSCS" selected> BSCS </option>
+                <option value="BSEM"> BSEM </option>
+                <option value="BSMT"> BSMT </option>
+            </select>
+            <br>
+
+            <!-- semester input -->
+            <label for="Semester"> Enter your semester: </label>
+            <select id="Semester" name="Semester">
+                <option value="1"> 1 </option>
+                <option value="2"> 2 </option>
+                <option value="3"> 3 </option>
+                <option value="4"> 4 </option>
+                <option value="5" selected> 5 </option>
+                <option value="6"> 6 </option>
+                <option value="7"> 7 </option>
+                <option value="8"> 8 </option>
+            </select>
+            <br>
+
+            <!-- displaying timetables and moving forward/backward -->
+            <button id="display" type="button" onClick="displayTimeTable()"> Create Timetable </button>
+            <br>
+            <button id="forwardTimetableButton" type="button" onClick="displayNext(1)"> Next timetable </button>
+            <button id="backwardTimetableButton" type="button" onClick="displayNext(-1)"> Previous timetable </button>
+        </form>
         <br>
 
-        <!-- program input -->
-        <label for="Program"> Enter your program: </label>
-        <select id="Program" name="Program">
-            <option value="BBA"> BBA </option>
-            <option value="BSAF"> BSAF </option>
-            <option value="BSECO"> BSECO </option>
-            <option value="BSSS"> BSSS </option>
-            <option value="BSCS" selected> BSCS </option>
-            <option value="BSEM"> BSEM </option>
-            <option value="BSMT"> BSMT </option>
-        </select>
+        <span id="timetableCount"></span>
+        <span id="timetableDisplaying"></span>
+
+        <!-- table for timetable -->
+        <table id="timetable" border="1">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th> Monday </th>
+                    <th> Tuesday </th>
+                    <th> Wednesday </th>
+                    <th> Thursday </th>
+                    <th> Friday </th>
+                    <th> Saturday </th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- 8:30-9:45 -->
+                <tr>
+                    <th> 8:30 - 9:45 </th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <!-- 10:00-11:15 -->
+                <tr>
+                    <th> 10:00 - 11:15 </th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <!-- 11:30-12:45 -->
+                <tr>
+                    <th> 11:30 - 12:45 </th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <!-- 1:00-2:15 -->
+                <tr>
+                    <th> 1:00 - 2:15 </th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <!-- 2:30-3:45 -->
+                <tr>
+                    <th> 2:30 - 3:45 </th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <!-- 4:00-5:15 -->
+                <tr>
+                    <th> 4:00 - 5:15 </th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <!-- 5:30-6:45 -->
+                <tr>
+                    <th> 5:30 - 6:45 </th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
         <br>
 
-        <!-- semester input -->
-        <label for="Semester"> Enter your semester: </label>
-        <select id="Semester" name="Semester">
-            <option value="1"> 1 </option>
-            <option value="2"> 2 </option>
-            <option value="3"> 3 </option>
-            <option value="4"> 4 </option>
-            <option value="5" selected> 5 </option>
-            <option value="6"> 6 </option>
-            <option value="7"> 7 </option>
-            <option value="8"> 8 </option>
-        </select>
-        <br>
-
-        <!-- displaying timetables and moving forward/backward -->
-        <button id="display" type="button" onClick="displayTimeTable()"> Create Timetable </button>
-        <br>
-        <button id="forward" type="button" onClick="displayNext(1)"> Next timetable </button>
-        <button id="backward" type="button" onClick="displayNext(-1)"> Previous timetable </button>
-    </form>
-    <br>
-
-    <span id="timetableCount"></span>
-    <span id="timetableDisplaying"></span>
-
-    <!-- table for timetable -->
-    <table id="timetable" border="1">
-        <thead>
-            <tr>
-                <th></th>
-                <th> Monday </th>
-                <th> Tuesday </th>
-                <th> Wednesday </th>
-                <th> Thursday </th>
-                <th> Friday </th>
-                <th> Saturday </th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- 8:30-9:45 -->
-            <tr>
-                <th> 8:30 - 9:45 </th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <!-- 10:00-11:15 -->
-            <tr>
-                <th> 10:00 - 11:15 </th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <!-- 11:30-12:45 -->
-            <tr>
-                <th> 11:30 - 12:45 </th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <!-- 1:00-2:15 -->
-            <tr>
-                <th> 1:00 - 2:15 </th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <!-- 2:30-3:45 -->
-            <tr>
-                <th> 2:30 - 3:45 </th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <!-- 4:00-5:15 -->
-            <tr>
-                <th> 4:00 - 5:15 </th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <!-- 5:30-6:45 -->
-            <tr>
-                <th> 5:30 - 6:45 </th>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-    <br>
-
-    <!-- table for courses -->
-    <table id="courses" border="1">
-        <thead>
-            <tr>
-                <th> Time </th>
-                <th> Course Name </th>
-                <th> Class UMS Number </th>
-                <th> Instructor </th>
-                <th> Days </th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+        <!-- table for courses -->
+        <table id="courses" border="1">
+            <thead>
+                <tr>
+                    <th> Time </th>
+                    <th> Course Name </th>
+                    <th> Class UMS Number </th>
+                    <th> Instructor </th>
+                    <th> Days </th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 
     <script type="module" src="../backend/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
